Update links to use crowdbench.pages.dev

--- a/index.html
+++ b/index.html
@@ -31,56 +31,56 @@
         <div class="bg-white p-6 rounded-lg shadow border-t-4 border-[var(--keele-yellow)]">
           <h2 class="text-2xl font-semibold text-center mb-4 text-[var(--keele-navy)]">Claude AI</h2>
           <div class="flex justify-center gap-6">
-            <a href="http://localhost:8080/genai/ClaudeHigh/LDAvis_results/index.html" class="text-[var(--keele-navy)] hover:underline font-medium">High</a>
-            <a href="http://localhost:8080/genai/ClaudeLow/LDAvis_results/index.html" class="text-[var(--keele-navy)] hover:underline font-medium">Low</a>
+            <a href="http://crowdbench.pages.dev/ClaudeHigh/LDAvis_results/index.html" class="text-[var(--keele-navy)] hover:underline font-medium">High</a>
+            <a href="http://crowdbench.pages.dev/ClaudeLow/LDAvis_results/index.html" class="text-[var(--keele-navy)] hover:underline font-medium">Low</a>
           </div>
         </div>
 
         <div class="bg-white p-6 rounded-lg shadow border-t-4 border-[var(--keele-yellow)]">
           <h2 class="text-2xl font-semibold text-center mb-4 text-[var(--keele-navy)]">Copilot</h2>
           <div class="flex justify-center gap-6">
-            <a href="http://localhost:8080/genai/CopilotHigh/LDAvis_results/index.html" class="text-[var(--keele-navy)] hover:underline font-medium">High</a>
-            <a href="http://localhost:8080/genai/CopilotLow/LDAvis_results/index.html" class="text-[var(--keele-navy)] hover:underline font-medium">Low</a>
+            <a href="http://crowdbench.pages.dev/CopilotHigh/LDAvis_results/index.html" class="text-[var(--keele-navy)] hover:underline font-medium">High</a>
+            <a href="http://crowdbench.pages.dev/CopilotLow/LDAvis_results/index.html" class="text-[var(--keele-navy)] hover:underline font-medium">Low</a>
           </div>
         </div>
 
         <div class="bg-white p-6 rounded-lg shadow border-t-4 border-[var(--keele-yellow)]">
           <h2 class="text-2xl font-semibold text-center mb-4 text-[var(--keele-navy)]">DeepSeek</h2>
           <div class="flex justify-center gap-6">
-            <a href="http://localhost:8080/genai/DeepseekHigh/LDAvis_results/index.html" class="text-[var(--keele-navy)] hover:underline font-medium">High</a>
-            <a href="http://localhost:8080/genai/DeepseekHigh/LDAvis_results/index.html" class="text-[var(--keele-navy)] hover:underline font-medium">Low</a>
+            <a href="http://crowdbench.pages.dev/DeepseekHigh/LDAvis_results/index.html" class="text-[var(--keele-navy)] hover:underline font-medium">High</a>
+            <a href="http://crowdbench.pages.dev/DeepseekHigh/LDAvis_results/index.html" class="text-[var(--keele-navy)] hover:underline font-medium">Low</a>
           </div>
         </div>
 
         <div class="bg-white p-6 rounded-lg shadow border-t-4 border-[var(--keele-yellow)]">
           <h2 class="text-2xl font-semibold text-center mb-4 text-[var(--keele-navy)]">ChatGPT</h2>
           <div class="flex justify-center gap-6">
-            <a href="http://localhost:8080/genai/chatgptHigh/LDAvis_results/index.html" class="text-[var(--keele-navy)] hover:underline font-medium">High</a>
-            <a href="http://localhost:8080/genai/chatgptLow/LDAvis_results/index.html" class="text-[var(--keele-navy)] hover:underline font-medium">Low</a>
+            <a href="http://crowdbench.pages.dev/chatgptHigh/LDAvis_results/index.html" class="text-[var(--keele-navy)] hover:underline font-medium">High</a>
+            <a href="http://crowdbench.pages.dev/chatgptLow/LDAvis_results/index.html" class="text-[var(--keele-navy)] hover:underline font-medium">Low</a>
           </div>
         </div>
 
         <div class="bg-white p-6 rounded-lg shadow border-t-4 border-[var(--keele-yellow)]">
           <h2 class="text-2xl font-semibold text-center mb-4 text-[var(--keele-navy)]">Gemini</h2>
           <div class="flex justify-center gap-6">
-            <a href="http://localhost:8080/genai/geminiHigh/LDAvis_results/index.html" class="text-[var(--keele-navy)] hover:underline font-medium">High</a>
-            <a href="http://localhost:8080/genai/geminiLow/LDAvis_results/index.html" class="text-[var(--keele-navy)] hover:underline font-medium">Low</a>
+            <a href="http://crowdbench.pages.dev/geminiHigh/LDAvis_results/index.html" class="text-[var(--keele-navy)] hover:underline font-medium">High</a>
+            <a href="http://crowdbench.pages.dev/geminiLow/LDAvis_results/index.html" class="text-[var(--keele-navy)] hover:underline font-medium">Low</a>
           </div>
         </div>
 
         <div class="bg-white p-6 rounded-lg shadow border-t-4 border-[var(--keele-yellow)]">
           <h2 class="text-2xl font-semibold text-center mb-4 text-[var(--keele-navy)]">Perplexity</h2>
           <div class="flex justify-center gap-6">
-            <a href="http://localhost:8080/genai/PerplexityHigh/LDAvis_results/index.html" class="text-[var(--keele-navy)] hover:underline font-medium">High</a>
-            <a href="http://localhost:8080/genai/PerplexityLow/LDAvis_results/index.html" class="text-[var(--keele-navy)] hover:underline font-medium">Low</a>
+            <a href="http://crowdbench.pages.dev/PerplexityHigh/LDAvis_results/index.html" class="text-[var(--keele-navy)] hover:underline font-medium">High</a>
+            <a href="http://crowdbench.pages.dev/PerplexityLow/LDAvis_results/index.html" class="text-[var(--keele-navy)] hover:underline font-medium">Low</a>
           </div>
         </div>
 
         <div class="bg-white p-6 rounded-lg shadow border-t-4 border-[var(--keele-yellow)]">
           <h2 class="text-2xl font-semibold text-center mb-4 text-[var(--keele-navy)]">Grok</h2>
           <div class="flex justify-center gap-6">
-            <a href="http://localhost:8080/genai/GrokHigh/LDAvis_results/index.html" class="text-[var(--keele-navy)] hover:underline font-medium">High</a>
-            <a href="http://localhost:8080/genai/GrokLow/LDAvis_results/index.html" class="text-[var(--keele-navy)] hover:underline font-medium">Low</a>
+            <a href="http://crowdbench.pages.dev/GrokHigh/LDAvis_results/index.html" class="text-[var(--keele-navy)] hover:underline font-medium">High</a>
+            <a href="http://crowdbench.pages.dev/GrokLow/LDAvis_results/index.html" class="text-[var(--keele-navy)] hover:underline font-medium">Low</a>
           </div>
         </div>
       </section>
