Update footer year and organization name

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </main>
 
     <footer class="text-center text-sm text-gray-500 py-6 border-t mt-12">
-      © 2025 Rotimi Ogunsakin |  Keele University
+      © 2026 IntelliSys Conference
     </footer>
   </body>
 </html>
